--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@
         .download-btn {
             display: none;
         }
+        .modal-overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.9);
+        z-index: 1000;
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        }
+        .modal-image {
+        max-width: 90vw;
+        max-height: 90vh;
+        object-fit: contain;
+        cursor: default;
+        }
     </style>
     <script>
         async function generateImage() {
@@ -183,6 +202,15 @@
                     img.onload = () => {
                         imageContainer.innerHTML = '';
                         imageContainer.appendChild(img);
+
+                        // Add click handler for the generated image
+                        img.addEventListener('click', () => {
+                            const modal = document.getElementById('modal-overlay');
+                            const modalImg = document.getElementById('modal-image');
+                            modal.style.display = 'flex';
+                            modalImg.src = imageUrl;
+                        });
+
                         // New scroll after image loads
                         window.scrollTo({
                             top: document.body.scrollHeight,
@@ -192,6 +220,7 @@
                     img.src = imageUrl;
                     img.style.maxWidth = '100%';
                     img.style.borderRadius = '10px';
+                    img.style.cursor = 'pointer';
                     downloadBtn.style.display = 'block';
                     downloadBtn.onclick = function() { downloadImage(imageUrl); };
                 } else {
@@ -237,6 +266,8 @@
             </div>
             <button id="download-btn" class="download-btn">Download Image</button>
         </div>
+        <div class="modal-overlay" id="modal-overlay" onclick="this.style.display='none'">
+            <img class="modal-image" id="modal-image" onclick="event.stopPropagation()">
     </div>
 </body>
 </html>
