--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
             </select>
             <label>Size</label>
             <select id="size">
+                <option>1920x1080</option>
                 <option>1024x1024</option>
                 <option>512x512</option>
                 <option>256x256</option>
