--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
             const sizeMapping = {
                 "1024x1024": "1024x1024",
                 "512x512": "512x512",
-                "256x256": "256x256"
+                "256x256": "256x256",
+                "1920x1080": "1920x1080"
             };
             const mappedSize = sizeMapping[size] || "1024x1024";
 
@@ -256,6 +257,7 @@
                 <option>1024x1024</option>
                 <option>512x512</option>
                 <option>256x256</option>
+                <option>1920x1080</option>
             </select>
             <button onclick="generateImage()">Generate Image</button>
         </div>
